--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
-    "name": "klapaudius/oauth-server-bundle",
+    "name": "mtrudu/oauth-server-bundle",
     "type": "symfony-bundle",
     "description": "Symfony OAuth Server Bundle",
     "keywords": ["oauth", "oauth2", "server"],
-    "homepage": "https://github.com/klapaudius/FOSOAuthServerBundle",
+    "homepage": "https://github.com/mtrudu/FOSOAuthServerBundle",
     "license": "MIT",
     "authors": [
-        {
-            "name": "Klapaudius",
-            "email": "klapaudius@gmail.com"
-        },
         {
             "name": "Arnaud Le Blanc",
             "email": "arnaud.lb@gmail.com"
@@ -23,11 +19,11 @@
         "php": "^8.0",
         "doctrine/doctrine-bundle": "~2.0",
         "klapaudius/oauth2-php": "~1.4",
-        "symfony/dependency-injection": "~6.0",
-        "symfony/form": "~6.0",
-        "symfony/framework-bundle": "~6.0",
-        "symfony/security-bundle": "~6.0",
-        "symfony/twig-bundle": "~6.0"
+        "symfony/dependency-injection": "~5.4|~6.0",
+        "symfony/form": "~5.4|~6.0",
+        "symfony/framework-bundle": "~5.4|~6.0",
+        "symfony/security-bundle": "~5.4|~6.0",
+        "symfony/twig-bundle": "~5.4|~6.0"
     },
     "require-dev": {
         "doctrine/mongodb-odm": "~2.0",
@@ -38,13 +34,13 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "~9.0",
         "symfony/class-loader": "^2.0",
-        "symfony/console": "~6.0",
-        "symfony/phpunit-bridge": "~6.0",
-        "symfony/templating": "~6.0",
-        "symfony/yaml": "~6.0"
+        "symfony/console": "~5.4|~6.0",
+        "symfony/phpunit-bridge": "~5.4|~6.0",
+        "symfony/templating": "~5.4|~6.0",
+        "symfony/yaml": "~5.4|~6.0"
     },
     "support": {
-        "issues": "https://github.com/klapaudius/FOSOAuthServerBundle/issues"
+        "issues": "https://github.com/mtrudu/FOSOAuthServerBundle/issues"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "*",
